--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "yiisoft/yii2-bootstrap4": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
 		"kartik-v/yii2-widgets": "dev-master",
+		"dvizh/yii2-seo": "@dev",
         "dektrium/yii2-user": "^0.9.14"
     },
     "require-dev": {
