--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
 		"kartik-v/yii2-widgets": "dev-master",
 		"dvizh/yii2-seo": "@dev",
         "dektrium/yii2-user": "^0.9.14",
-        "dmstr/yii2-adminlte-asset": "^2.1"
+        "dmstr/yii2-adminlte-asset": "^2.1",
+        "mirocow/yii2-yandex-maps" : "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
