--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
 		"dvizh/yii2-seo": "@dev",
         "dektrium/yii2-user": "^0.9.14",
         "dmstr/yii2-adminlte-asset": "^2.1",
-        "mirocow/yii2-yandex-maps" : "dev-master"
+        "mirocow/yii2-yandex-maps" : "dev-master",
+        "msvdev/yii2-widget-mappicker": "*",
+        "dektrium/yii2-rbac": "1.0.0-alpha@dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
